@@ -1,8 +1,10 @@
 package test;
 
 import java.util.Arrays;
+import java.util.Collection;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Stream;
 
 import aQute.bnd.header.Attrs;
 import aQute.bnd.header.Attrs.Type;
@@ -10,6 +12,7 @@ import aQute.bnd.header.OSGiHeader;
 import aQute.bnd.header.Parameters;
 import aQute.bnd.osgi.Processor;
 import aQute.bnd.version.Version;
+import aQute.lib.strings.Strings;
 import junit.framework.TestCase;
 
 public class ParseHeaderTest extends TestCase {
@@ -21,7 +24,7 @@ public class ParseHeaderTest extends TestCase {
 		String s = p.toString();
 		System.out.println(s);
 		assertEquals(
-				"a;a:Long=1;b:Double=\"3.2\";c:String=abc;d:Version=1;"
+			"a;a:Long=1;b:Double=\"3.2\";c=abc;d:Version=1;"
 						+ "e:List<Long>=\"1,2,3\";f:List<Double>=\"1.0,1.1,1.2\";g:List<String>=\"abc,def,ghi\";h:List<Version>=\"1.0.1,1.0.2\"",
 				s);
 
@@ -72,7 +75,7 @@ public class ParseHeaderTest extends TestCase {
 
 	}
 
-	public static void testPropertiesSimple() {
+	public void testPropertiesSimple() {
 		Map<String,String> p = OSGiHeader.parseProperties("a=1, b=\"3   3\", c=c");
 		assertEquals("c", p.get("c"));
 		assertEquals("1", p.get("a"));
@@ -88,7 +91,7 @@ public class ParseHeaderTest extends TestCase {
 	 * osgi.service.http.port=8180,\ osgi.console= while the following does
 	 * work: -runproperties: osgi.console=,\ osgi.service.http.port=8180
 	 */
-	public static void testUnfinishedProperties() {
+	public void testUnfinishedProperties() {
 		Map<String,String> p = OSGiHeader.parseProperties("osgi.console");
 		assertEquals("", p.get("osgi.console"));
 		p = OSGiHeader.parseProperties("osgi.console=");
@@ -105,7 +108,7 @@ public class ParseHeaderTest extends TestCase {
 		assertEquals("", p.get("osgi.console"));
 	}
 
-	public static void testClauseName() {
+	public void testClauseName() {
 		assertNames("a,b,c;", new String[] {
 				"a", "b", "c"
 		});
@@ -163,7 +166,7 @@ public class ParseHeaderTest extends TestCase {
 		if (expectedError != null) {
 			System.err.println(p.getErrors());
 			assertTrue(p.getErrors().size() > 0);
-			assertTrue(p.getErrors().get(0).indexOf(expectedError) >= 0);
+			assertTrue(p.getErrors().get(0).contains(expectedError));
 		} else
 			assertEquals(0, p.getErrors().size());
 		if (expectedWarning != null) {
@@ -175,7 +178,7 @@ public class ParseHeaderTest extends TestCase {
 			assertEquals(0, p.getWarnings().size());
 	}
 
-	public static void testSimple() {
+	public void testSimple() {
 		String s = "a;a=a1;b=a2;c=a3, b;a=b1;b=b2;c=b3, c;d;e;a=x1";
 		Parameters map = Processor.parseHeader(s, null);
 		assertEquals(5, map.size());
@@ -194,7 +197,7 @@ public class ParseHeaderTest extends TestCase {
 		System.err.println(map);
 	}
 
-	public static void testParseMultiValueAttribute() {
+	public void testParseMultiValueAttribute() {
 		String s = "capability;foo:List<String>=\"MacOSX,Mac OS X\";version:List<Version>=\"1.0, 2.0, 2.1\"";
 		Parameters map = Processor.parseHeader(s, null);
 
@@ -212,5 +215,42 @@ public class ParseHeaderTest extends TestCase {
 		assertEquals(new Version(1), version.get(0));
 		assertEquals(new Version(2), version.get(1));
 		assertEquals(new Version(2, 1), version.get(2));
+	}
+
+	public void testParametersCollector() throws Exception {
+		Stream<String> pkgs = Stream.of("com.foo;com.fuu;fizz=bazz;dir:=dar", "com.bar;a=b,org.foo;provide:=true",
+			"org.fuu", "io.hiho;viking:Version=2");
+		Parameters p = pkgs.collect(Parameters.toParameters());
+		Attrs a;
+		a = p.get("com.foo");
+		assertNotNull(a);
+		assertEquals("bazz", a.get("fizz"));
+		assertEquals("dar", a.get("dir:"));
+		a = p.get("com.fuu");
+		assertNotNull(a);
+		assertEquals("bazz", a.get("fizz"));
+		assertEquals("dar", a.get("dir:"));
+		a = p.get("com.bar");
+		assertNotNull(a);
+		assertEquals("b", a.get("a"));
+		assertNull(a.get("provide:"));
+		a = p.get("org.foo");
+		assertNotNull(a);
+		assertNull(a.get("a"));
+		assertEquals("true", a.get("provide:"));
+		a = p.get("org.fuu");
+		assertNotNull(a);
+		assertTrue(a.isEmpty());
+		a = p.get("io.hiho");
+		assertNotNull(a);
+		assertEquals(Attrs.Type.VERSION, a.getType("viking"));
+		assertEquals(Version.parseVersion("2.0.0"), Version.parseVersion(a.get("viking")));
+	}
+
+	public void testParametersKeyList() throws Exception {
+		String s = "--add-opens, mod1, --add-opens, mod2";
+		Parameters map = Processor.parseHeader(s, null);
+		Collection<String> keyList = map.keyList();
+		assertEquals("--add-opens mod1 --add-opens mod2", Strings.join(" ", keyList));
 	}
 }
